# openssl_qrng_provider

./: .gitignore  .gitmodules  Makefile  README.md  mkcert.c  qrng_provider.c
qrng_daemon/: CMakeLists.txt  qrng_daemon.c  test_consumer.c
qrng_provider/: CMakeLists.txt  README.md  openssl_legacy.cnf  qrng.c
qrng_rand_data/: CMakeLists.txt  cfg_read.c  cfg_read.h  log.c  log.h  main.c  qrng.cnf  utils.c  utils.h
qrng_rand_data/config/: cfg_run.c  config.l  config.y
src/: openssl.cnf  qrng.c
